--- a/ww_generator.html
+++ b/ww_generator.html
@@ -19,7 +19,7 @@
 <button id="copyButton" onclick="copySeed()" style="display:none;">Copy Seed</button>
 <button id="downloadButton" onclick="downloadPosters()" style="display:none;">Download 5 Sheet Posters</button>
 
-<script src="bip39_words.html"></script> <!-- Load the word list dynamically -->
+<script src="bip39_words.js"></script> <!-- Load the word list dynamically -->
 
 <script>
 const rowLetters = ["A","B","C","D","E","F","G","J","K","L","M","N","O","P","R","S","T","V","X","Y","Z"];
