--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<script src="bip39_words.html"></script>
+<script src="bip39_words.js"></script>
 <script>
   alert("Loaded words: " + (bip39Words ? bip39Words.length : "FAILED"));
 </script>
