--- a/ww_generator.html
+++ b/ww_generator.html
@@ -106,16 +106,31 @@ async function downloadPosters() {
     ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
 
     // Column headers
-    for(let c=0;c<sheetCols;c++){
-      const x = c*cellWidth + cellWidth;
-      ctx.fillStyle="#cccccc";
-      ctx.fillRect(x,0,cellWidth,cellHeight);
-      ctx.fillStyle="#000000";
-      const colNumber = (colStart+c+1 <= totalCols) ? String(colStart+c+1).padStart(2,"0") : "";
-      ctx.fillText(colNumber, x+cellWidth/2, cellHeight/2);
-      ctx.strokeStyle="#000000";
-      ctx.strokeRect(x,0,cellWidth,cellHeight);
-    }
+    for (let r = 0; r < totalRows; r++) {
+    for (let c = 0; c < sheetCols; c++) {
+
+    // Render position (skip column 0, which is row labels)
+    const x = (c + 1) * cellWidth;
+    const y = (r + 1) * cellHeight;
+
+    // Logical column index (0–97)
+    const logicalCol = colStart + c;
+
+    // Global word index
+    const idx = r * totalCols + logicalCol;
+
+    const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
+
+    ctx.fillStyle = "#ffffff";
+    ctx.fillRect(x, y, cellWidth, cellHeight);
+
+    ctx.fillStyle = "#000000";
+    ctx.fillText(word, x + cellWidth / 2, y + cellHeight / 2);
+
+    ctx.strokeStyle = "#000000";
+    ctx.strokeRect(x, y, cellWidth, cellHeight);
+  }
+}
 
     // Row headers
     for(let r=0;r<totalRows;r++){
