--- a/ww_generator.html
+++ b/ww_generator.html
@@ -106,16 +106,33 @@ async function downloadPosters() {
     ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
 
     // Column headers
-    for(let c=0;c<sheetCols;c++){
-      const x = c*cellWidth + cellWidth;
-      ctx.fillStyle="#cccccc";
-      ctx.fillRect(x,0,cellWidth,cellHeight);
-      ctx.fillStyle="#000000";
-      const colNumber = (colStart+c+1 <= totalCols) ? String(colStart+c+1).padStart(2,"0") : "";
-      ctx.fillText(colNumber, x+cellWidth/2, cellHeight/2);
-      ctx.strokeStyle="#000000";
-      ctx.strokeRect(x,0,cellWidth,cellHeight);
-    }
+    for(let c=0; c<sheetCols; c++){
+  const x = c * cellWidth; // Removed + cellWidth
+  ctx.fillStyle="#cccccc";
+  ctx.fillRect(x, 0, cellWidth, cellHeight);
+  ctx.fillStyle="#000000";
+  const colNumber = (colStart + c + 1 <= totalCols) ? String(colStart + c + 1).padStart(2, "0") : "";
+  ctx.fillText(colNumber, x + cellWidth / 2, cellHeight / 2);
+  ctx.strokeStyle="#000000";
+  ctx.strokeRect(x, 0, cellWidth, cellHeight);
+}
+
+// Words + grid
+for(let r=0; r<totalRows; r++){
+  for(let c=0; c<sheetCols; c++){
+    const x = c * cellWidth; // Removed + cellWidth
+    const y = (r + 1) * cellHeight;
+    ctx.fillStyle="#ffffff";
+    ctx.fillRect(x, y, cellWidth, cellHeight);
+
+    const idx = r * totalCols + (colStart + c);
+    const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
+    ctx.fillStyle="#000000";
+    ctx.fillText(word, x + cellWidth / 2, y + cellHeight / 2);
+
+    ctx.strokeStyle="#000000";
+    ctx.strokeRect(x, y, cellWidth, cellHeight);
+  }
     
     // Row headers
     for(let r=0;r<totalRows;r++){
@@ -127,24 +144,7 @@ async function downloadPosters() {
       ctx.strokeStyle="#000000";
       ctx.strokeRect(0,y,cellWidth,cellHeight);
     }
-
-    // Words + grid
-    for(let r=0;r<totalRows;r++){
-      for(let c=0;c<sheetCols;c++){
-        const x = c*cellWidth + cellWidth;
-        const y = (r+1)*cellHeight;
-        ctx.fillStyle="#ffffff";
-        ctx.fillRect(x,y,cellWidth,cellHeight);
-
-        const idx = r*totalCols + (colStart+c);
-        const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
-        ctx.fillStyle="#000000";
-        ctx.fillText(word, x+cellWidth/2, y+cellHeight/2);
-
-        ctx.strokeStyle="#000000";
-        ctx.strokeRect(x,y,cellWidth,cellHeight);
-      }
-    }
+  
 
     // Footer
     ctx.font = `${Math.floor(cellHeight*0.2)}px sans-serif`;
