--- a/ww_generator.html
+++ b/ww_generator.html
@@ -116,11 +116,10 @@ async function downloadPosters() {
   ctx.strokeStyle="#000000";
   ctx.strokeRect(x, 0, cellWidth, cellHeight);
 }
-
 // Words + grid
 for(let r=0; r<totalRows; r++){
   for(let c=0; c<sheetCols; c++){
-    const x = c * cellWidth; // Removed + cellWidth
+    const x = c * cellWidth;
     const y = (r + 1) * cellHeight;
     ctx.fillStyle="#ffffff";
     ctx.fillRect(x, y, cellWidth, cellHeight);
@@ -133,17 +132,19 @@ for(let r=0; r<totalRows; r++){
     ctx.strokeStyle="#000000";
     ctx.strokeRect(x, y, cellWidth, cellHeight);
   }
+}
+
+// Row headers (moved outside the word generation loop)
+for(let r=0; r<totalRows; r++){
+  const y = (r + 1) * cellHeight;
+  ctx.fillStyle="#cccccc";
+  ctx.fillRect(0, y, cellWidth, cellHeight);
+  ctx.fillStyle="#000000";
+  ctx.fillText(rowLetters[r], cellWidth / 2, y + cellHeight / 2);
+  ctx.strokeStyle="#000000";
+  ctx.strokeRect(0, y, cellWidth, cellHeight);
+}
     
-    // Row headers
-    for(let r=0;r<totalRows;r++){
-      const y = (r+1)*cellHeight;
-      ctx.fillStyle="#cccccc";
-      ctx.fillRect(0,y,cellWidth,cellHeight);
-      ctx.fillStyle="#000000";
-      ctx.fillText(rowLetters[r], cellWidth/2, y+cellHeight/2);
-      ctx.strokeStyle="#000000";
-      ctx.strokeRect(0,y,cellWidth,cellHeight);
-    }
   
 
     // Footer
