--- a/ww_generator.html
+++ b/ww_generator.html
@@ -133,17 +133,30 @@ for(let r=0; r<totalRows; r++){
     ctx.strokeRect(x, y, cellWidth, cellHeight);
   }
 }
-
-// Row headers (moved outside the word generation loop)
-for(let r=0; r<totalRows; r++){
-  const y = (r + 1) * cellHeight;
+  {
+  // Row headers
+  const y = (r+1)*cellHeight;
   ctx.fillStyle="#cccccc";
-  ctx.fillRect(0, y, cellWidth, cellHeight);
+  ctx.fillRect(0,y,cellWidth,cellHeight);
   ctx.fillStyle="#000000";
-  ctx.fillText(rowLetters[r], cellWidth / 2, y + cellHeight / 2);
+  ctx.fillText(rowLetters[r], cellWidth/2, y+cellHeight/2);
   ctx.strokeStyle="#000000";
-  ctx.strokeRect(0, y, cellWidth, cellHeight);
-}
+  ctx.strokeRect(0,y,cellWidth,cellHeight);
+
+  for(let c=0; c<sheetCols; c++){
+    const x = c * cellWidth; 
+    ctx.fillStyle="#ffffff";
+    ctx.fillRect(x, y, cellWidth, cellHeight);
+
+    const idx = r * totalCols + (colStart + c);
+    const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
+    ctx.fillStyle="#000000";
+    ctx.fillText(word, x + cellWidth / 2, y + cellHeight / 2);
+
+    ctx.strokeStyle="#000000";
+    ctx.strokeRect(x, y, cellWidth, cellHeight);
+  }
+}  
     
   
 
