--- a/ww_generator.html
+++ b/ww_generator.html
@@ -133,7 +133,8 @@ for(let r=0; r<totalRows; r++){
     ctx.strokeRect(x, y, cellWidth, cellHeight);
   }
 }
-  {
+  // Words + grid
+for(let r=0; r<totalRows; r++){
   // Row headers
   const y = (r+1)*cellHeight;
   ctx.fillStyle="#cccccc";
