--- a/ww_generator.html
+++ b/ww_generator.html
@@ -67,6 +67,7 @@ function shuffle(array, rng) {
 }
 
 // ---------- Multi-sheet Poster Download ----------
+
 async function downloadPosters() {
   if(typeof bip39Words === "undefined" || bip39Words.length !== 2048){
     alert("BIP39 word list not loaded correctly!");
@@ -80,68 +81,92 @@ async function downloadPosters() {
 
   const totalCols = 98;
   const totalRows = 21;
-  const sheetCols = 20; // equal columns per sheet
+  const sheetCols = 20; // number of word columns per sheet
   const sheets = 5;
 
   const dpi = 300;
-  const width_mm = 841, height_mm = 594;
+  const width_mm = 841, height_mm = 594; // A1 landscape
   const width_px = Math.floor(width_mm / 25.4 * dpi);
   const height_px = Math.floor(height_mm / 25.4 * dpi);
 
+  const rowHeaderWidth = 50; // px reserved for row letters
+  const colHeaderHeight = 50; // px reserved for column numbers
+
   for(let s=0; s<sheets; s++){
-    const colStart = s*sheetCols;
+    const colStart = s * sheetCols;
+
     const canvas = document.createElement("canvas");
     canvas.width = width_px;
     canvas.height = height_px;
     const ctx = canvas.getContext("2d");
 
+    // Background
     ctx.fillStyle = "#ffffff";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    const cellWidth = canvas.width / sheetCols;
-    const cellHeight = canvas.height / totalRows;
+    // Compute cell sizes
+    const cellWidth = (canvas.width - rowHeaderWidth) / sheetCols;
+    const cellHeight = (canvas.height - colHeaderHeight) / totalRows;
 
     ctx.textAlign = "center";
     ctx.textBaseline = "middle";
     ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
 
-    // Column headers
+    // -------- Column headers --------
     for(let c=0; c<sheetCols; c++){
-  const x = c * cellWidth; // Removed + cellWidth
-  ctx.fillStyle="#cccccc";
-  ctx.fillRect(x, 0, cellWidth, cellHeight);
-  ctx.fillStyle="#000000";
-  const colNumber = (colStart + c + 1 <= totalCols) ? String(colStart + c + 1).padStart(2, "0") : "";
-  ctx.fillText(colNumber, x + cellWidth / 2, cellHeight / 2);
-  ctx.strokeStyle="#000000";
-  ctx.strokeRect(x, 0, cellWidth, cellHeight);
-}
-    // Words + grid
-for(let r=0; r<totalRows; r++){
-  // Row headers
-  const y = (r + 1) * cellHeight;
-  ctx.fillStyle = "#cccccc";
-  ctx.fillRect(0, y, cellWidth, cellHeight);
-  ctx.fillStyle = "#000000";
-  ctx.fillText(rowLetters[r], cellWidth / 2, y + cellHeight / 2);
-  ctx.strokeStyle = "#000000";
-  ctx.strokeRect(0, y, cellWidth, cellHeight);
+      const x = rowHeaderWidth + c * cellWidth;
+      ctx.fillStyle = "#cccccc";
+      ctx.fillRect(x, 0, cellWidth, colHeaderHeight);
+      ctx.fillStyle = "#000000";
+      const colNumber = (colStart + c + 1 <= totalCols) ? String(colStart + c + 1).padStart(2,"0") : "";
+      ctx.fillText(colNumber, x + cellWidth/2, colHeaderHeight/2);
+      ctx.strokeStyle = "#000000";
+      ctx.strokeRect(x, 0, cellWidth, colHeaderHeight);
+    }
 
-  for(let c=0; c<sheetCols; c++){
-    const x = c * cellWidth; 
-    ctx.fillStyle = "#ffffff";
-    ctx.fillRect(x, y, cellWidth, cellHeight);
+    // -------- Row headers and word cells --------
+    for(let r=0; r<totalRows; r++){
+      const y = colHeaderHeight + r * cellHeight;
 
-    const idx = r * totalCols + (colStart + c);
-    const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
-    ctx.fillStyle = "#000000";
-    ctx.fillText(word, x + cellWidth / 2, y + cellHeight / 2);
+      // Row header
+      ctx.fillStyle = "#cccccc";
+      ctx.fillRect(0, y, rowHeaderWidth, cellHeight);
+      ctx.fillStyle = "#000000";
+      ctx.fillText(rowLetters[r], rowHeaderWidth/2, y + cellHeight/2);
+      ctx.strokeStyle = "#000000";
+      ctx.strokeRect(0, y, rowHeaderWidth, cellHeight);
 
-    ctx.strokeStyle = "#000000";
-    ctx.strokeRect(x, y, cellWidth, cellHeight);
+      // Word cells
+      for(let c=0; c<sheetCols; c++){
+        const x = rowHeaderWidth + c * cellWidth;
+        ctx.fillStyle = "#ffffff";
+        ctx.fillRect(x, y, cellWidth, cellHeight);
+
+        const idx = r * totalCols + (colStart + c);
+        const word = (idx < wordsCopy.length) ? wordsCopy[idx] : "";
+        ctx.fillStyle = "#000000";
+        ctx.fillText(word, x + cellWidth/2, y + cellHeight/2);
+
+        ctx.strokeStyle = "#000000";
+        ctx.strokeRect(x, y, cellWidth, cellHeight);
+      }
+    }
+
+    // -------- Footer with seed --------
+    ctx.font = `${Math.floor(cellHeight*0.2)}px sans-serif`;
+    ctx.fillText(`Seed: ${currentSeed}`, canvas.width/2, canvas.height - cellHeight/2);
+
+    // Download PNG
+    canvas.toBlob(function(blob){
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      const safeName = currentSeed.replace(/[^a-zA-Z0-9-_]/g,"_");
+      link.download = `${safeName}_Sheet${s+1}.png`;
+      link.click();
+    }, "image/png");
   }
 }
-    
+
   
 
     // Footer
