--- a/ww_generator.html
+++ b/ww_generator.html
@@ -22,7 +22,7 @@
 <script src="bip39_words.js"></script> <!-- Load the word list dynamically -->
 
 <script>
-const rowLetters = Array.from({ length: totalRows }, (_, i) => String.fromCharCode(65 + i)); // Generates ['A', 'B', 'C', ..., 'U']
+const totalRows = 21; // Define totalRows before using it
 const rowLetters = ["A","B","C","D","E","F","G","J","K","L","M","N","O","P","R","S","T","V","X","Y","Z"];
 let currentSeed = "";
 
