--- a/ww_generator.html
+++ b/ww_generator.html
@@ -110,19 +110,9 @@ function isCellAllowed(globalCol, row) {
     const ctx = canvas.getContext("2d");
 
     // Background
-    ctx.fillStyle = headerColor;
+    ctx.fillStyle = "#ffffff";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    // -------- Page number (top-left cell) --------
-    ctx.fillStyle = headerColor;
-    ctx.fillRect(0, 0, cellWidth, cellHeight);
-
-    ctx.fillStyle = "#000000";
-    ctx.font = `${Math.floor(cellHeight * 0.5)}px sans-serif`;
-    ctx.fillText(circledNumbers[s], cellWidth / 2, cellHeight / 2);
-
-    ctx.strokeStyle = "#000000";
-    ctx.strokeRect(0, 0, cellWidth, cellHeight);
 
     // Compute cell sizes
     const totalGridCols = sheetCols + 1; // +1 for row header
@@ -137,6 +127,17 @@ function isCellAllowed(globalCol, row) {
     ctx.textAlign = "center";
     ctx.textBaseline = "middle";
     ctx.font = `${Math.floor(cellHeight*0.3)}px sans-serif`;
+
+    // -------- Page number (top-left cell) --------
+    ctx.fillStyle = headerColor;
+    ctx.fillRect(0, 0, cellWidth, cellHeight);
+
+    ctx.fillStyle = "#000000";
+    ctx.font = `${Math.floor(cellHeight * 0.5)}px sans-serif`;
+    ctx.fillText(circledNumbers[s], cellWidth / 2, cellHeight / 2);
+
+    ctx.strokeStyle = "#000000";
+    ctx.strokeRect(0, 0, cellWidth, cellHeight);
 
     // -------- Column headers --------
     for(let c=0; c<sheetCols; c++){
