--- a/ww_generator.html
+++ b/ww_generator.html
@@ -1,4 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BYOB WW_GENERATOR</title>
+<style>
+/* Keep your existing styles or use previous generator styles */
+</style>
+</head>
+<body>
+
+<h2>BIP39 Deterministic Poster Generator</h2>
+
+<label>Name: <input type="text" id="nameInput" placeholder="Your name"></label><br>
+<button onclick="generateSeed()">Generate Seed</button>
+
+<div id="seedDisplay"></div>
+<button id="copyButton" onclick="copySeed()" style="display:none;">Copy Seed</button>
+<button id="downloadButton" onclick="downloadPosters()" style="display:none;">Download 5 Sheet Posters</button>
+
+<script src="bip39_words.js"></script> <!-- Load the word list dynamically -->
+
 <script>
+const rowLetters = ["A","B","C","D","E","F","G","J","K","L","M","N","O","P","R","S","T","V","X","Y","Z"];
+let currentSeed = "";
+
+// ---------- Seed generation ----------
+async function generateSeed() {
+  const name = document.getElementById("nameInput").value || "anon";
+  const today = new Date();
+  const dateStr = `[${String(today.getDate()).padStart(2,'0')}/${String(today.getMonth()+1).padStart(2,'0')}/${today.getFullYear()}]`;
+  currentSeed = `become-your-own-bank${dateStr}[${name}]`;
+
+  document.getElementById("seedDisplay").textContent = "Seed: " + currentSeed;
+  document.getElementById("copyButton").style.display = "inline";
+  document.getElementById("downloadButton").style.display = "inline";
+}
+
+function copySeed() {
+  navigator.clipboard.writeText(currentSeed);
+  alert("Seed copied to clipboard! Save it to reproduce the same grid.");
+}
+
+// ---------- Deterministic PRNG ----------
+async function hashSeed(seed) {
+  const encoder = new TextEncoder();
+  const data = encoder.encode(seed);
+  const hashBuffer = await crypto.subtle.digest("SHA-256", data);
+  return new Uint32Array(hashBuffer);
+}
+
+function mulberry32(a) {
+  return function() {
+    let t = a += 0x6D2B79F5;
+    t = Math.imul(t ^ t >>> 15, t | 1);
+    t ^= t + Math.imul(t ^ t >>> 7, t | 61);
+    return ((t ^ t >>> 14) >>> 0) / 4294967296;
+  }
+}
+
+function shuffle(array, rng) {
+  for(let i=array.length-1; i>0; i--){
+    const j = Math.floor(rng()*(i+1));
+    [array[i], array[j]] = [array[j], array[i]];
+  }
+}
+
+  // --------  Poster ---------
 async function downloadPosters() {
   if(typeof bip39Words === "undefined" || bip39Words.length !== 2048){
     alert("BIP39 word list not loaded correctly!");
