--- a/ww_generator.html
+++ b/ww_generator.html
@@ -72,7 +72,26 @@ async function downloadPosters() {
     alert("BIP39 word list not loaded correctly!");
     return;
   }
+// Compute cell sizes first
+const totalGridCols = sheetCols + 1; // +1 for row header
+const totalGridRows = totalRows + 1; // +1 for column header
+const cellWidth = canvas.width / totalGridCols;
+const cellHeight = canvas.height / totalGridRows;
 
+const rowHeaderWidth = cellWidth;
+const colHeaderHeight = cellHeight;
+
+// -------- Page number (top-left cell) --------
+ctx.fillStyle = headerColor;
+ctx.fillRect(0, 0, cellWidth, cellHeight);
+ctx.font = `${pageFontSize}px sans-serif`;
+ctx.fillStyle = "#000000";
+ctx.fillText(circledNumbers[s], cellWidth / 2, cellHeight / 2);
+ctx.strokeStyle = "#000000";
+ctx.strokeRect(0, 0, cellWidth, cellHeight);
+
+
+  
   const totalCols = 100; // max column index
   const hashArray = await hashSeed(currentSeed);
   const rng = mulberry32(hashArray[0]);
@@ -112,31 +131,12 @@ async function downloadPosters() {
     ctx.fillStyle = "#ffffff";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    // Compute cell sizes
-    const totalGridCols = sheetCols + 1; // +1 for row header
-    const totalGridRows = totalRows + 1; // +1 for column header
-    const cellWidth = canvas.width / totalGridCols;
-    const cellHeight = canvas.height / totalGridRows;
-
-    const rowHeaderWidth = cellWidth;
-    const colHeaderHeight = cellHeight;
-
     const wordFontSize = Math.floor(Math.min(cellHeight*0.22, cellWidth*0.18));
     const headerFontSize = Math.floor(cellHeight*0.3);
     const pageFontSize = Math.floor(cellHeight*0.5);
 
     ctx.textAlign = "center";
     ctx.textBaseline = "middle";
-
-    // -------- Page number (top-left cell) --------
-    ctx.fillStyle = headerColor;
-    ctx.fillRect(0, 0, cellWidth, cellHeight);
-
-    ctx.font = `${pageFontSize}px sans-serif`;
-    ctx.fillStyle = "#000000";
-    ctx.fillText(circledNumbers[s], cellWidth / 2, cellHeight / 2);
-    ctx.strokeStyle = "#000000";
-    ctx.strokeRect(0, 0, cellWidth, cellHeight);
 
     // -------- Column headers --------
     for(let c=0; c<sheetCols; c++){
