--- a/ww_generator.html
+++ b/ww_generator.html
@@ -22,8 +22,7 @@ button { margin: 5px; }
 
 <div id="seedDisplay"></div>
 <button id="copyButton" onclick="copySeed()" style="display:none;">Copy Seed</button>
-<button id="downloadButton" onclick="downloadPosters()" style="display:none;">Download 5 Sheet Posters</button>
-
+<button id="downloadButton">Download 5 Sheet Posters</button>
 <script src="bip39_words.js"></script> <!-- Load your BIP39 word list -->
 
 <script>
