--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
 </head>
 <body>
 
-  <h1>Become Your Own Bank (BYOB)</h1>
+  <h1>BYOB - Become Your Own Bank</h1>
   <p class="subtitle">
-    Welcome to BYOB – a toolkit for securely managing your cryptocurrency. 
-    Explore deterministic wallet grids, poster generators, and other tools to take control of your digital assets.
+    Legal Notice
+BYOB is an open-source educational project and community framework.
+It is not a bank, not a financial institution, and not a custodial service.
+BYOB does not hold funds, manage accounts, generate private keys, sign transactions, or provide financial, investment, or legal advice. No assets are stored, transmitted, or controlled by BYOB, this website, or its contributors.
+Participation is entirely voluntary and at your own risk. Users are solely responsible for the creation, protection, and use of their own cryptographic material. Loss of access, loss of funds, or misuse cannot be reversed.
+BYOB is provided “as is,” without warranties of any kind. By proceeding, you acknowledge that you understand these risks and accept full responsibility for your actions.
+If you do not understand these risks, do not proceed.
   </p>
 
   <!-- Button to WW_GENERATOR page -->
