--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <body>
 
   <h1>BYOB - Become Your Own Bank</h1>
+  <h2>Legal Notice</h2>
   <p class="subtitle">
-    Legal Notice
 BYOB is an open-source educational project and community framework.
 It is not a bank, not a financial institution, and not a custodial service.
 BYOB does not hold funds, manage accounts, generate private keys, sign transactions, or provide financial, investment, or legal advice. No assets are stored, transmitted, or controlled by BYOB, this website, or its contributors.
