--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     color: #0d6efd;
   }
 
+  h2 {
+    font-size: 1.3em;
+    margin-bottom: 2em;
+    color: #495057;
+  }
+
   p.subtitle {
     font-size: 1.3em;
     margin-bottom: 2em;
