--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <h1>BYOB - Become Your Own Bank</h1>
   <h2>Legal Notice</h2>
   <p class="subtitle">
-BYOB is an open-source educational project and community framework.
+BYOB is an open-source educational project and community preparedness protocol.
 It is not a bank, not a financial institution, and not a custodial service.
 BYOB does not hold funds, manage accounts, generate private keys, sign transactions, or provide financial, investment, or legal advice. No assets are stored, transmitted, or controlled by BYOB, this website, or its contributors.
 Participation is entirely voluntary and at your own risk. Users are solely responsible for the creation, protection, and use of their own cryptographic material. Loss of access, loss of funds, or misuse cannot be reversed.
