--- a/ww_generator.html
+++ b/ww_generator.html
@@ -9,7 +9,7 @@
 /* Keep your existing styles or use previous generator styles */  
 </style>  
 </head>  
-<body>  <h2>BIP39 Deterministic Poster Generator</h2>  <label>Name: <input type="text" id="nameInput" placeholder="Your name"></label><br>
+<body>  <h2>BIP39 Deterministic Poster Generator</h2>  <label>Wall ID: <input type="text" id="nameInput" placeholder="WW05"></label><br>
 <button onclick="generateSeed()">Generate Seed</button>
 
 <div id="seedDisplay"></div>  
